refactor(halls): separate public and admin hall DTOs