@@ -8,7 +8,10 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import com.chalchitraghar.modules.halls.dto.request.HallRequest;
-import com.chalchitraghar.modules.halls.dto.response.HallResponse;
+import com.chalchitraghar.modules.halls.dto.response.AdminHallDetailResponse;
+import com.chalchitraghar.modules.halls.dto.response.AdminHallSummaryResponse;
+import com.chalchitraghar.modules.halls.dto.response.PublicHallDetailResponse;
+import com.chalchitraghar.modules.halls.dto.response.PublicHallSummaryResponse;
 import com.chalchitraghar.shared.exception.ResourceNotFoundException;
 import com.chalchitraghar.modules.halls.mapper.HallMapper;
 import com.chalchitraghar.modules.halls.entity.Hall;
@@ -26,20 +29,20 @@ public class HallServiceImpl implements HallService {
     private final HallMapper hallMapper;
 
     @Override
-    public HallResponse addHall(HallRequest dto) {
+    public AdminHallDetailResponse addHall(HallRequest dto) {
         if (hallRepository.existsByName(dto.getName())) {
             throw new IllegalArgumentException("Hall with this name already exists");
         }
         Hall hall = hallMapper.toEntity(dto);
-        return hallMapper.toResponseDto(hallRepository.save(hall));
+        return hallMapper.toAdminDetail(hallRepository.save(hall));
     }
 
     @Override
-    public HallResponse updateHall(Long id, HallRequest dto) {
+    public AdminHallDetailResponse updateHall(Long id, HallRequest dto) {
         Hall hall = hallRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Hall", id));
         hallMapper.updateEntityFromDto(hall, dto);
-        return hallMapper.toResponseDto(hallRepository.save(hall));
+        return hallMapper.toAdminDetail(hallRepository.save(hall));
     }
 
     @Override
@@ -52,21 +55,52 @@ public class HallServiceImpl implements HallService {
 
     @Override
     @Transactional(readOnly = true)
-    public List<HallResponse> getAllHalls() {
-        return hallRepository.findAll().stream().map(hallMapper::toResponseDto).collect(Collectors.toList());
+    public List<PublicHallSummaryResponse> getPublicHalls() {
+        return hallRepository.findAllByStatus(Status.ACTIVE).stream()
+                .map(hallMapper::toPublicSummary)
+                .collect(Collectors.toList());
     }
 
     @Override
     @Transactional(readOnly = true)
-    public HallResponse getHallById(Long id) {
+    public PublicHallDetailResponse getPublicHallById(Long id) {
         Hall hall = hallRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Hall", id));
-        return hallMapper.toResponseDto(hall);
+        if (hall.getStatus() != Status.ACTIVE) {
+            throw new ResourceNotFoundException("Hall", id);
+        }
+        return hallMapper.toPublicDetail(hall);
     }
 
     @Override
     @Transactional(readOnly = true)
-    public List<HallResponse> getActiveHalls() {
-        return hallRepository.findAllByStatus(Status.ACTIVE).stream().map(hallMapper::toResponseDto).toList();
+    public List<PublicHallSummaryResponse> getPublicActiveHalls() {
+        return hallRepository.findAllByStatus(Status.ACTIVE).stream()
+                .map(hallMapper::toPublicSummary)
+                .toList();
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<AdminHallSummaryResponse> getAdminHalls() {
+        return hallRepository.findAll().stream()
+                .map(hallMapper::toAdminSummary)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public AdminHallDetailResponse getAdminHallById(Long id) {
+        Hall hall = hallRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Hall", id));
+        return hallMapper.toAdminDetail(hall);
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<AdminHallSummaryResponse> getAdminActiveHalls() {
+        return hallRepository.findAllByStatus(Status.ACTIVE).stream()
+                .map(hallMapper::toAdminSummary)
+                .toList();
     }
 }
